--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,10 @@ services:
             - ./minio/data:/data
             - ./minio/config:/root/.minio
         command: server /data --console-address ":9090"
+        profiles:
+            - svc-kp
+            - svc-data
+            - svc-ml
     db:
         image: postgres
         restart: always
@@ -23,9 +27,13 @@ services:
             - ./kernel-planckster/postgres-data:/var/lib/postgresql/data
         ports:
         - 5432:5432
+        profiles:
+            - svc-kp
     adminer:
         image: adminer
         container_name: kp-adminer
         restart: always
         ports:
         - 8080:8080
+        profiles:
+            - svc-kp
