--- a/clusters/staging/apps.yaml
+++ b/clusters/staging/apps.yaml
@@ -5,8 +5,8 @@ metadata:
   namespace: flux-system
 spec:
   interval: 2m0s
-  dependsOn:
-    - name: infra-configs
+  # dependsOn:
+  #   - name: infra-configs
   sourceRef:
     kind: GitRepository
     name: flux-system
