--- a/releases/base/secrets/kustomization.yaml
+++ b/releases/base/secrets/kustomization.yaml
@@ -2,3 +2,23 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
     - ./kp-auth-token.yaml
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age19xkz3rtp7pu0vzxmzqq2qd5reh0e4v328764re7vtj547yxls3zqgv6mp3
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1M2pRYVBjZnUwVzlNZUZL
+            OXFBU1F0U2M1RVVJNmVRS05sSElrVWExT2hjCmt4S01lamxFcGZtWklFTHo2bWsr
+            eHN3SVZXVEgwUm4vMnpzejF5djNsZTQKLS0tIGxpTmdlbHBCYW8rRWNaOWtRZGMy
+            SlNuVmxzaitmY1JZME5Nb1U5MVZ5SWsKhMGchzdjY90mCbWiNLaPUfCmYI+prnok
+            meZZ+ZU3YR9vRf4e8vos75/5j2BUZQg43RzXeoEujLaFJsDj69f3rA==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-04-10T23:34:26Z"
+    mac: ENC[AES256_GCM,data:19nnmHmUw5Mj9iMzFBxUqSB5FSeJIEK2TWkE3TMYoshlYTMHHQRJl8QnyQpQ1vJFkNQw4MKTQ9kGDJdXIzerznZg+feYhgN6OMhP3PKC/PjLo/owUcKZluLJQm7JKokMsRPIHm9xZ/IiMYm/Exzt10alrW5dkLcPL+E8eTurpyA=,iv:OXNSPyHpP+/d7CZ3QrbV/Btr1KwzwN9KVfNTpOrmRjM=,tag:Sw464V0O9Ibj6GU9BRGc3Q==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.7.2
