move auth token to flux

--- a/releases/base/secrets/kp-auth-token.yaml
+++ b/releases/base/secrets/kp-auth-token.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
     name: kp-auth-token
-    namespace: sda
+    namespace: flux-system
 type: Opaque
 stringData:
     token: ENC[AES256_GCM,data:ZoGliyZI72kvEk+J,iv:nY22oKjdzJzUQRb4b2/ayaNvk1PQJWLzbOo9yLdtPeo=,tag:1o8efG2MDGKMoHhNcokR+w==,type:str]
