add auth section in postgres

--- a/releases/base/postgres/helmrelease-postgres.yaml
+++ b/releases/base/postgres/helmrelease-postgres.yaml
@@ -25,3 +25,8 @@ spec:
           password: postgres
           database: kp
           postgresPassword: postgres
+    auth:
+      username: postgres
+      password: postgres
+      database: kp
+      postgresPassword: postgres
