add global auth section for postgres

--- a/releases/base/postgres/helmrelease-postgres.yaml
+++ b/releases/base/postgres/helmrelease-postgres.yaml
@@ -17,8 +17,9 @@ spec:
   install:
     disableWait: true
   values:
-    auth:
-      username: test
-      database: kp
-      password: test123
-
+    global:
+      postgresql:
+        auth:
+          database: kp # works
+          username: test
+          password: test123
