change default username for postgres

--- a/releases/base/postgres/helmrelease-postgres.yaml
+++ b/releases/base/postgres/helmrelease-postgres.yaml
@@ -20,6 +20,6 @@ spec:
     global:
       postgresql:
         auth:
-          database: kp # works
-          username: test
+          database: kp
+          username: kp-admin
           existingSecret: postgres-secret
