--- a/releases/base/secrets/kustomization.yaml
+++ b/releases/base/secrets/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-    - ./kp-auth-token.yaml
+    - ./kp-minio-credentials.yaml
     - ./postgres-secret.yaml
     - ./minio-secret.yaml
