--- a/releases/base/secrets/kustomization.yaml
+++ b/releases/base/secrets/kustomization.yaml
@@ -2,5 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
     # - ./kp-minio-credentials.yaml
+    - ./kp-auth-token.yaml
     - ./postgres-secret.yaml
     - ./minio-secret.yaml
+    - ./websat-openai-secret.yaml
+    - ./websat-auth-secret.yaml
