--- a/releases/production/kustomization.yaml
+++ b/releases/production/kustomization.yaml
@@ -2,6 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../base
+  - ./secrets
+  - ./cloudflared
 patchesStrategicMerge:
   - ./patch-kernel-planckster.yaml
   - ./patch-websat-planckster.yaml
