--- a/releases/production/patch-kernel-planckster.yaml
+++ b/releases/production/patch-kernel-planckster.yaml
@@ -24,5 +24,5 @@ spec:
           image: maany/kernel-planckster:1.0.0-alpha
           env:
             - name: KP_ALLOWED_ORIGINS
-              value: "*.sda.svc.cluster.local, sda.mpi-sws.org, *.cluster.local"
+              value: "*.cluster.local, *.devmaany.com"
 
