--- a/releases/production/cloudflared/sda-tunnel/config.yaml
+++ b/releases/production/cloudflared/sda-tunnel/config.yaml
@@ -22,7 +22,7 @@ data:
     # E.g. `cloudflared tunnel route dns example-tunnel tunnel.example.com`.
     ingress:
     # The first rule proxies traffic to the httpbin sample Service defined in app.yaml
-    - hostname: kernel-planckster.devmaany.com
+    - hostname: sda.devmaany.com
       service: http://websat-planckster.sda.svc.cluster.local:3000
     # This rule matches any traffic which didn't match a previous rule, and responds with HTTP 404.
     - service: http_status:404
