--- a/releases/production/cloudflared/kustomization.yaml
+++ b/releases/production/cloudflared/kustomization.yaml
@@ -1,5 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./kp-tunnel
+  - config.yaml
+  - deployment.yaml
+  # - ./kp-tunnel
   # - ./sda-tunnel
