--- a/releases/production/cloudflared/config.yaml
+++ b/releases/production/cloudflared/config.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: cloudflare
 data:
   config.yaml: |
-    tunnel: sda
+    tunnel: sda-tunnel
     credentials-file: /etc/cloudflared/creds/credentials.json
     # Serves the metrics server under /metrics and the readiness server under /ready
     metrics: 0.0.0.0:2000
