--- a/releases/production/cloudflared/kustomization.yaml
+++ b/releases/production/cloudflared/kustomization.yaml
@@ -2,6 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - config.yaml
-  # - deployment.yaml
-  # - ./kp-tunnel
-  # - ./sda-tunnel
+  - deployment.yaml
