fix secret mounts for cloudflare pods

--- a/releases/production/cloudflared/deployment.yaml
+++ b/releases/production/cloudflared/deployment.yaml
@@ -60,7 +60,7 @@ spec:
           # kubectl create secret generic tunnel-credentials \
           # --from-file=credentials.json=/Users/yourusername/.cloudflared/<tunnel ID>.json
           # ```
-          secretName: kp-tunnel-credentials
+          secretName: sda-tunnel-credentials
       # Create a config.yaml file from the ConfigMap below.
       - name: config
         configMap:
