--- a/releases/production/patch-kernel-planckster.yaml
+++ b/releases/production/patch-kernel-planckster.yaml
@@ -25,4 +25,11 @@ spec:
           env:
             - name: KP_ALLOWED_ORIGINS
               value: "*.cluster.local, *.devmaany.com"
+          resources:
+            limits:
+              memory: "128Mi"
+              cpu: "100m"
+            requests:
+              memory: "64Mi"
+              cpu: "50m"
 
