--- a/releases/production/patch-websat-planckster.yaml
+++ b/releases/production/patch-websat-planckster.yaml
@@ -28,8 +28,8 @@ spec:
               value: "1"
           resources:
             limits:
-              memory: "512Mi"
-              cpu: "100m"
+              memory: "1Gi"
+              cpu: "500m"
             requests:
-              memory: "256Mi"
-              cpu: "100m"
+              memory: "1Gi"
+              cpu: "500m"
