--- a/releases/production/cloudflared/config.yaml
+++ b/releases/production/cloudflared/config.yaml
@@ -29,5 +29,5 @@ data:
     - hostname: kubeflow.devmaany.com
       service: http://istio-ingressgateway.istio-system.svc.cluster.local:80
     - hostname: sda-minio.devmaany.com
-      service: https:/minio.minio-operator.svc.cluster.local:9000
+      service: https:/myminio-console.minio-operator.svc.cluster.local:9443
     - service: http_status:404
