--- a/releases/base/kernel-planckster/deployment-kp.yaml
+++ b/releases/base/kernel-planckster/deployment-kp.yaml
@@ -28,11 +28,11 @@ spec:
               protocol: TCP
           resources:
             limits:
+              cpu: "2"
+              memory: "2Gi"
+            requests:
               cpu: "1"
               memory: "1Gi"
-            requests:
-              cpu: "0.5"
-              memory: "512Mi"
           readinessProbe:
             httpGet:
               path: /ping
