--- a/releases/production/patch-kernel-planckster.yaml
+++ b/releases/production/patch-kernel-planckster.yaml
@@ -33,9 +33,9 @@ spec:
               value: "true"
           resources:
             limits:
-              memory: "256Mi"
-              cpu: "100m"
+              memory: "1Gi"
+              cpu: "500m"
             requests:
-              memory: "256Mi"
-              cpu: "100m"
+              memory: "1Gi"
+              cpu: "500m"
 
