--- a/releases/production/patch-kernel-planckster.yaml
+++ b/releases/production/patch-kernel-planckster.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     ch.dadai.service: kernel-planckster
 spec:
-  replicas: 3
+  replicas: 1
   strategy:
     rollingUpdate:
       maxUnavailable: 0
@@ -33,9 +33,9 @@ spec:
               value: "true"
           resources:
             limits:
-              memory: "256Mi"
-              cpu: "100m"
+              memory: "3Gi"
+              cpu: "2000m"
             requests:
-              memory: "256Mi"
-              cpu: "100m"
+              memory: "3Gi"
+              cpu: "2000m"
 
