minio: enable minio in deployment

--- a/releases/base/kustomization.yaml
+++ b/releases/base/kustomization.yaml
@@ -4,6 +4,6 @@ resources:
     - ./secrets
     - ./bitnami
     - ./postgres
-    # - ./minio
+    - ./minio
     - ./kernel-planckster
     - ./websat-planckster
