minio-prod: init new namespace, operator and tenant

--- a/releases/production/kustomization.yaml
+++ b/releases/production/kustomization.yaml
@@ -7,3 +7,4 @@ resources:
 patchesStrategicMerge:
   - ./patch-kernel-planckster.yaml
   - ./patch-websat-planckster.yaml
+  - ./patch-helmrelease-minio-prod.yaml
