--- a/releases/base/kustomization.yaml
+++ b/releases/base/kustomization.yaml
@@ -5,5 +5,6 @@ resources:
     - ./bitnami
     - ./postgres
     - ./minio
+    - ./minio-prod
     - ./kernel-planckster
     - ./websat-planckster
