--- a/releases/production/patch-helmrelease-minio-prod.yaml
+++ b/releases/production/patch-helmrelease-minio-prod.yaml
@@ -3,7 +3,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: minio-operator
-  namespace: minio
+  namespace: minio-prod
 spec:
   values:
     nodeSelector:
