--- a/releases/production/patch-helmrelease-minio-prod.yaml
+++ b/releases/production/patch-helmrelease-minio-prod.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: minio-operator
+  name: minio-prod
   namespace: minio-prod
 spec:
   values:
