--- a/releases/production/patch-helmrelease-minio-prod.yaml
+++ b/releases/production/patch-helmrelease-minio-prod.yaml
@@ -7,8 +7,7 @@ metadata:
 spec:
   values:
     nodeSelector:
-      key: "kubernetes.io/hostname"
-      value: "sda-worker-03"
+      kubernetes.io/hostname: sda-worker-03
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
@@ -20,6 +19,5 @@ spec:
     pools:
       - name: prod-pool
         nodeSelector:
-          key: "kubernetes.io/hostname"
-          value: "sda-worker-03"
+          kubernetes.io/hostname: sda-worker-03
     
