--- a/releases/production/kustomization.yaml
+++ b/releases/production/kustomization.yaml
@@ -7,4 +7,4 @@ resources:
 patchesStrategicMerge:
   - ./patch-kernel-planckster.yaml
   - ./patch-websat-planckster.yaml
-  - ./patch-helmrelease-minio-prod.yaml
+  # - ./patch-helmrelease-minio-prod.yaml
