update kernel-planckster configuration: add nodeSelector and increase CPU limits

--- a/releases/production/patch-kernel-planckster.yaml
+++ b/releases/production/patch-kernel-planckster.yaml
@@ -19,6 +19,8 @@ spec:
       labels:
         ch.dadai.service: kernel-planckster
     spec:
+      nodeSelector:
+          kubernetes.io/hostname: "sda-worker-3"
       containers:
         - name: kernel-planckster
           image: maany/kernel-planckster:2.0.0
@@ -34,8 +36,8 @@ spec:
           resources:
             limits:
               memory: "6Gi"
-              cpu: "2000m"
+              cpu: "3000m"
             requests:
               memory: "4Gi"
-              cpu: "2000m"
+              cpu: "3000m"
 
