kernel-planckster (2.0.2): environment variable: rename KP_FASTAPI_ALLOWED_ORIGINS to KP_ALLOWED_ORIGINS

--- a/releases/production/patch-kernel-planckster.yaml
+++ b/releases/production/patch-kernel-planckster.yaml
@@ -25,7 +25,7 @@ spec:
         - name: kernel-planckster
           image: maany/kernel-planckster:2.0.1
           env:
-            - name: KP_FASTAPI_ALLOWED_ORIGINS
+            - name: KP_ALLOWED_ORIGINS
               value: "*.cluster.local, *.devmaany.com"
             - name: KP_FASTAPI_WORKERS
               value: "4"
